--- a/404.html
+++ b/404.html
@@ -1,48 +1,124 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Oops! Page Not Found</title>
   <style>
+    :root {
+      --bg-light: #f0f4f8;
+      --bg-dark: #121212;
+      --text-light: #111;
+      --text-dark: #eee;
+      --highlight: #57a6ff;
+      --btn-bg-light: #4CAF50;
+      --btn-bg-dark: #3a8f3a;
+    }
+
+    body.light {
+      background-color: var(--bg-light);
+      color: var(--text-light);
+    }
+
+    body.dark {
+      background-color: var(--bg-dark);
+      color: var(--text-dark);
+    }
+
     body {
-      font-family: sans-serif;
+      font-family: 'Share Tech Mono', monospace, monospace;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
-      background-color: #f0f0f0;
+      margin: 0;
+      transition: background-color 0.4s, color 0.4s;
+      padding: 20px;
+      text-align: center;
+      user-select: none;
     }
 
     h1 {
-      font-size: 3em;
-      margin-bottom: 20px;
+      font-size: 4rem;
+      margin-bottom: 0.3em;
+      color: var(--highlight);
     }
 
     p {
-      font-size: 1.2em;
-      margin-bottom: 30px;
+      font-size: 1.2rem;
+      margin-bottom: 1.5em;
+      opacity: 0.85;
+      max-width: 400px;
     }
 
     button {
-      padding: 15px 30px;
-      background-color: #4CAF50;
+      padding: 12px 28px;
+      background-color: var(--btn-bg-light);
       color: white;
       border: none;
-      border-radius: 5px;
+      border-radius: 8px;
       cursor: pointer;
+      font-size: 1rem;
+      font-family: 'Share Tech Mono', monospace;
+      transition: background-color 0.3s;
+    }
+
+    body.dark button {
+      background-color: var(--btn-bg-dark);
+    }
+
+    button:hover {
+      background-color: #2e7d32;
+    }
+
+    #theme-toggle {
+      position: fixed;
+      top: 16px;
+      right: 16px;
+      background: var(--highlight);
+      border: none;
+      border-radius: 6px;
+      color: white;
+      padding: 6px 12px;
+      font-family: 'Share Tech Mono', monospace;
+      cursor: pointer;
+      user-select: none;
+      box-shadow: 0 0 8px var(--highlight);
+      transition: background-color 0.3s;
+    }
+
+    #theme-toggle:hover {
+      background-color: #3b8cff;
     }
   </style>
 </head>
-<body>
+<body class="light">
+  <button id="theme-toggle">☀ / 🌙</button>
   <h1>ERR. 404</h1>
   <p>The page you're looking for doesn't exist. If you're using the proxy, press "register serviceworker."</p>
   <button id="reloadBtn">Register serviceworker!!!</button>
 
   <script>
     const reloadBtn = document.getElementById('reloadBtn');
+    const themeToggle = document.getElementById('theme-toggle');
+
     reloadBtn.addEventListener('click', () => {
       window.location.reload();
     });
+
+    themeToggle.addEventListener('click', () => {
+      document.body.classList.toggle('light');
+      document.body.classList.toggle('dark');
+      localStorage.setItem('theme', document.body.classList.contains('dark') ? 'dark' : 'light');
+    });
+
+    // Apply saved theme on load
+    const savedTheme = localStorage.getItem('theme');
+    if (savedTheme === 'dark') {
+      document.body.classList.remove('light');
+      document.body.classList.add('dark');
+    }
   </script>
 </body>
 </html>
